--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -38,8 +38,8 @@ modules:
         scope: system
         # If no repo information is specified, Flathub will be used by default
         install: # system flatpaks we want all users to have and not remove
-          - org.mozilla.firefox
-          - org.gnome.Loupe
+          - app.zen_browser.zen
+          - com.brave.Browser
       - scope: user # Also add Flathub user repo, but no user packages
 
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
