--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,7 +6,7 @@ name: nullVoid
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/silverblue-main
+base-image: ghcr.io/ublue-os/kinoite-main
 image-version: 42 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
@@ -20,10 +20,10 @@ modules:
   - type: dnf
     repos:
       copr:
-        - atim/starship
+        - meccataf/duoRPM
     install:
       packages:
-        - micro
+        - scroll
         - starship
     remove:
       packages:
