--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -6,7 +6,7 @@ name: nullVoid
 description: This is my personal OS image.
 
 # the base image to build on top of (FROM) and the version tag to use
-base-image: ghcr.io/ublue-os/kinoite-main
+base-image: ghcr.io/ublue-os/aurora-dx
 image-version: 42 # latest is also supported if you want new updates ASAP
 
 # module configuration, executed in order
